PARK/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-85be27a5-b73c-484a-909c-aacc2c914ce4
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-85be27a5-b73c-484a-909c-aacc2c914ce4
  template:
    metadata:
      labels:
        app: springboot-app-85be27a5-b73c-484a-909c-aacc2c914ce4
    spec:
      containers:
      - name: springboot
        image: ravi8881/2e49f282-85d5-4866-af7d-8133a75e6769-f5e66296-a68f-4fae-ab34-616938e14a6b-bc5fa525-1f32-4c53-bf17-b98dd59ff12e-baaa5a57-1f2e-48bd-95a4-9103c847a98a-graph:3.0.0
        ports:
        - containerPort: 8081
